<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva_tarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.a2dam.aplicacionproyecto.NuevaTarea"
    android:gravity="center"
    android:weightSum="1">

    <EditText
        android:id="@+id/etNewTaksName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintNameNewTask"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNewTaskDesc"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_weight="0.58"
        android:ems="10"
        android:hint="@string/hintDescriptionNewTask"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveTask" />
</LinearLayout>
