<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.a2dam.aplicacionproyecto.MainActivity">

    <Button
        android:id="@+id/btnnewSesion"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_above="@+id/btnstats"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/btnNewSesion" />

    <Button
        android:id="@+id/btnstats"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btnStats" />

    <Button
        android:id="@+id/btncredits"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_below="@+id/btnstats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btnCredits" />
</RelativeLayout>
