<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva_sesion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.a2dam.aplicacionproyecto.NuevaSesion"
    android:weightSum="1"
    android:gravity="center">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/textTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:layout_weight="0.59" />

            <Spinner
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:id="@+id/spinner2" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_weight="0.59" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="71dp">

        <TextView
            android:text="@string/textTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <CheckBox
                android:text="@string/chbxNoStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:layout_weight="0.39" />

            <Spinner
                android:layout_width="248dp"
                android:layout_height="36dp"
                android:id="@+id/spinner3"
                android:layout_weight="0.37" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/textTimeExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="0.09" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <Button
            android:text="@string/btnStartTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
